Fix JVM warnings